# FluxSand

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  fluxsand.service
services/: fluxsand.service
src/: fluxsand.hpp  main.cpp
src/bsp/: bsp.hpp  bsp_gpio.hpp  bsp_i2c.hpp  bsp_pwm.hpp  bsp_spi.hpp  gpio.hpp  spi.hpp
src/component/: comp_ahrs.hpp  comp_gui.hpp  comp_inference.hpp  comp_sand.hpp  comp_type.hpp
src/controller/: fluxsand.hpp  inference_handler.hpp  input_handler.hpp  mode_manager.hpp  sensor_manager.hpp
src/device/: ads1115.hpp  aht20.hpp  bmp280.hpp  max7219.hpp  mpu9250.hpp
test/: bsp.hpp  bsp_gpio.hpp  bsp_i2c.hpp  bsp_pwm.hpp  bsp_spi.hpp  test_main.cpp
